<resources>
    <string name="app_name">Salatuk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="title_activity_salat_fragment">When should I pray?</string>
    <string name="title_activity_detail">Details</string>
	<string name="before_label">Sunnahs before fard(optional)</string>
	<string name="fard_label">Fard(obligatory)</string>
		<string name="after_label">Sunnahs after fard(optional)</string>
	<string name="plural_label">Congregational Prayer(salat al-jama‘ah)</string>
    <string name="notification_title">Salatuk</string>
    <string name="notification_text">Remember prayers times of today</string>
    <string name="title_activity_main_activity2">MainActivity2</string>


	
</resources>
